--- a/src/scss/_theme_default.scss
+++ b/src/scss/_theme_default.scss
@@ -246,7 +246,7 @@ $jazz-theme-feature: (
 
         // table
         table-font: jazz-font(jazz-public-sans),
-        table-border-color: jazz-color(jazz-gray-60),
+        table-border-color: jazz-color(jazz-gray-20),
         table-th-bgcolor: jazz-color(jazz-white),
         table-th-color: jazz-color(jazz-black),
         table-th-border-color: jazz-color(jazz-gray-60),
